--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,24 +1,20 @@
 cmake_minimum_required(VERSION 3.5.0)
 project(ZupaSlica VERSION 0.1.0 LANGUAGES C CXX)
 
-
-if(NOT CMAKE_BUILD_TYPE)
-  set(CMAKE_BUILD_TYPE Release)
-endif()
-
-set(CMAKE_CXX_FLAGS_DEBUG "-g")
-set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")
+set(CMAKE_CXX_STANDARD 17)
 
 link_directories(/usr/local/lib)
 link_directories(/home/xandervaes/dev/assimp/bin)
+link_directories(${CMAKE_SOURCE_DIR}/WinLibs)
 
 
 add_subdirectory(src/libs/nativefiledialog-extended)
 
 
-
+find_package(OpenGL REQUIRED)
 
 find_package(OpenMP)
+
 if(OpenMP_CXX_FOUND)
 set(LIBS PUBLIC glfw assimp OpenMP::OpenMP_CXX nfd)
 endif()
